--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/styles/style.scss"
+              "src/assets/styles/style.scss",
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/owl.carousel/dist/owl.carousel.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -78,7 +80,9 @@
             "styles": [
               "src/assets/styles/style.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/owl.carousel/dist/owl.carousel.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
