--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.4",
+    "ngx-owl-carousel": "^2.0.7",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.3.3",
+    "script-loader": "^0.7.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
